replace deprecated Paths.get() call with new static factory method Path.of()